--- a/examples/simple.html
+++ b/examples/simple.html
@@ -41,7 +41,7 @@
 </head>
 
 <body>
-  <p id="error">Opps, you need to build the package before running this example. Don't worry its easy, just run <code>rake</code> in the project's directory.</p>
+  <p id="error">Oops, you need to build the package before running this example. It's easy: just run <code>rake</code> in the project's directory.</p>
 
   <p>This is a simple example of how easy it is to get up and running with WysiHat.</p>
 
