--- a/test/unit/fixtures/actions.html
+++ b/test/unit/fixtures/actions.html
@@ -1,3 +1,3 @@
 <form action="#" method="post">
-  <textarea id="content">&lt;em&gt;Not bold&lt;/em&gt; &lt;strong&gt;Bold&lt;/strong&gt;</textarea>
+  <textarea id="content">&lt;span style="font-weight: bold"&gt;Bold&lt;/span&gt; &lt;span style="font-style: italic"&gt;Not bold&lt;/span&gt;</textarea>
 </form>
